# My-Awesome-Django

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  db.sqlite3  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
awesome_django/: conftest.py
awesome_django/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
awesome_django/oauth/: urls.py
awesome_django/oauth/views/: logto.py
awesome_django/templates/: base.html
awesome_django/users/: adapters.py  apps.py  models.py  views.py
awesome_django/users/api/: serializers.py  views.py
awesome_django/users/migrations/: 0001_initial.py
awesome_django/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt
